Fix overlap ML search / Search button

--- a/assets/css/components/ModuleSearch.scss
+++ b/assets/css/components/ModuleSearch.scss
@@ -1,6 +1,6 @@
 .module-search {
   position: absolute;
-  top: 3px;
+  top: 0;
   left: 0;
   width: $module-width;
   font-size: 1.4rem;
